<resources>
    <string name="app_name">EasyBus</string>
    <string name="favorites">Favoritos</string>
    <string name="direction">Itinerário</string>
    <string name="empresas">Empresas</string>
    <string name="select_linha">Escolha uma linha</string>
    <string name="select_periodo">Escolha um período</string>
    <string name="tituloSpinner">Escolha uma das opções</string>
    <string name="descCircular">Euclides da Cunha, Av. Nossa Sra. Das Dores, Av. Medianeira, Av. Angelo Uglione, Av Liberdade, Av Borges de Medeiros
    Av. Salgado Filho, Rua Sete de Setembro, Rua Marechal Deodoro.
    </string>
    <string name="descUfsm">Vale Machado, Rio Branco, Acampamento, Nossa Sra. Das Dores, RS 509, Av. Roraima</string>
    <string name="gabardo">
        Endereco:Rua Ernesto Becker, n° 18\n
        Cep 97020-140 - Vila Oliveira\n
        Santa Maria - Rio Grande do Sul - Brasil\n
        Telefone:3212-3030 3212-1940 \n
        Email:contato@gabardotransportes.com.br\n
        Site:http://www.gabardotransportes.com.br</string>
    <string name="medianeira">
        Endereco: ""\n
        Telefone: ""\n
        Email: ""\n
        Site: http://www.expressomedianeira.com.br
    </string>
    <string name="dores">
        Endereco: Av. Osvaldo Cruz, 240\n
        Santa Maria - RS\n
        CEP: 97095-470\n
        Telefone: 3223 4161\n
        Email: contato@expressodores.com.br\n
        Site: http://www.expressodores.com.br\n
    </string>
    <string name="salgadofilho">
        Endereco: Avenida Borges de Medeiros, 1098\n
        Santa Maria (RS)\n
        Telefone: (55) 3225-5115\n
        Email: contato@transportesalgadofilho.com.br\n
        Site: http://www.transportesalgadofilho.com.br\n
    </string>
    <string name="viacao">
        Endereco: ""\n
        Telefone: ""\n
        Email: ""\n
        Site:
    </string>
    <string name="btn_exit">Sair</string>
    <string name="btn_ok">OK</string>





</resources>
