<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empresas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="unifra.edu.mobile.easybus.Empresas">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bcgColor2Dark"
        android:text="Empresas de Transportes"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/empGabardo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Gabardo Transportes"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/dadosGabardo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/gabardo"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/empMedianeira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Expresso Medianeira"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/dadosMedianeira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medianeira"
                    android:textStyle="italic"
                    android:textColor="#000000" />
            </LinearLayout>


            <TextView
                android:id="@+id/empSalgado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Transportes Salgado Filho"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/dadosSalgado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salgadofilho"
                    android:textStyle="italic"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/empViacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Viação Centro Oeste"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/dadosViacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/viacao"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/empDores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Expresso Dores"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/dadosDores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dores"
                    android:textColor="#000000" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
